# bingo

./: .gitignore  DEPLOYMENT_STATIC.md  README.md  build.sh  docker-compose.yml  docs.md
backend/: .gitignore  Dockerfile  create_tables.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  extensions.py
backend/app/models/: __init__.py  game.py  player.py  room.py  user.py
backend/app/routes/: __init__.py  auth.py  game.py  lobby.py  socketio_handlers.py
backend/app/schemas/: user_schema.py
backend/app/services/: ai.py  auth_service.py  game_logic.py
backend/app/utils/: __init__.py  decorators.py
backend/migrations/versions/: 89a34b334ad7_add_room_model_for_online_multiplayer.py
backend/static/: index.html
backend/static/assets/: index-B8bcBwgC.js  index-BooGUhUN.js  index-CaqupnIm.js  index-Cdmr_5P3.css  index-I70a3Ih2.css  index-JBK1oqF0.js  index-xLvaThfs.js
backend/tests/: conftest.py  test_auth.py  test_game.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: app.tsx  index.css  main.tsx
frontend/src/components/: header.tsx
frontend/src/components/game/: board.tsx  cell.tsx  game-status.tsx
frontend/src/pages/: game.tsx  home.tsx  instructions.tsx  lobby.tsx  login.tsx  register.tsx
frontend/src/services/: api.ts  socket.ts
frontend/src/store/: index.ts
frontend/src/store/slices/: auth-slice.ts  game-slice.ts
frontend/src/types/: index.ts
