[project]
name = "bingo-backend"
version = "0.1.0"
description = "Bingo Connect Four Game - Backend API"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.5",
    "flask-jwt-extended>=4.6.0",
    "flask-socketio>=5.3.6",
    "flask-cors>=4.0.0",
    "flask-marshmallow>=0.15.0",
    "marshmallow>=3.20.1",
    "marshmallow-sqlalchemy>=1.0.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.0",
    "python-socketio>=5.11.0",
    "eventlet>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

